# kdev-xdebug

./: .kde-ci.yml  CMakeLists.txt  Messages.sh  README  breakpointcontroller.cpp  breakpointcontroller.h  connection.cpp  connection.h  debugjob.cpp  debugjob.h  debugsession.cpp  debugsession.h  framestackmodel.cpp  framestackmodel.h  kdevxdebug.desktop  kdevxdebug.desktop.cmake  kdevxdebug.json  launchconfig.cpp  launchconfig.h  launchconfigurationpage.cpp  launchconfigurationpage.h  launchconfigurationpage.ui  pathmapping.ui  stringhelpers.cpp  stringhelpers.h  variable.cpp  variable.h  variablecontroller.cpp  variablecontroller.h  version.h.cmake  xdebug.kdev4  xdebugplugin.cpp  xdebugplugin.h
.kdev4/: _custom.kdev4  xdebug.kdev4
po/ar/: kdevxdebug.po
po/az/: kdevxdebug.po
po/bs/: kdevxdebug.po
po/ca/: kdevxdebug.po
po/ca@valencia/: kdevxdebug.po
po/cs/: kdevxdebug.po
po/da/: kdevxdebug.po
po/de/: kdevxdebug.po
po/en_GB/: kdevxdebug.po
po/eo/: kdevxdebug.po
po/es/: kdevxdebug.po
po/et/: kdevxdebug.po
po/eu/: kdevxdebug.po
po/fi/: kdevxdebug.po
po/fr/: kdevxdebug.po
po/ga/: kdevxdebug.po
po/gl/: kdevxdebug.po
po/he/: kdevxdebug.po
po/hi/: kdevxdebug.po
po/hu/: kdevxdebug.po
po/it/: kdevxdebug.po
po/ja/: kdevxdebug.po
po/ka/: kdevxdebug.po
po/ko/: kdevxdebug.po
po/lt/: kdevxdebug.po
po/mai/: kdevxdebug.po
po/nds/: kdevxdebug.po
po/nl/: kdevxdebug.po
po/nn/: kdevxdebug.po
po/pl/: kdevxdebug.po
po/pt/: kdevxdebug.po
po/pt_BR/: kdevxdebug.po
po/ru/: kdevxdebug.po
po/sk/: kdevxdebug.po
po/sl/: kdevxdebug.po
po/sv/: kdevxdebug.po
po/tr/: kdevxdebug.po
po/ug/: kdevxdebug.po
po/uk/: kdevxdebug.po
po/zh_CN/: kdevxdebug.po
po/zh_TW/: kdevxdebug.po
tests/: connectiontest.cpp  connectiontest.h  test.php
